Fixed bug with navbar on mobile

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body nav#navbar {
 	background-color: rgba(15, 51, 68, 0.9);
 	position: fixed;
 	top: 0px;
+	z-index: 999;
 }
 
 nav img#nav-logo-img {
